# syllabus_comparison

./: README.md  pyproject.toml  test.py  test_compare.py
syllabus_comparison/: __init__.py  compare.py  extract_topics.py  model.py  report.py  similarity.py
syllabus_comparison.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
